expected/main/core/structs/nested-struct-align-32.err
ERROR: "actual/main/core/structs/nested-struct-align-32.lc", line 6
struct U [ a :: S | b :: T ]
                    ^
Cannot access field b (offset 6 is not divisible by alignment 4)

ERROR: "actual/main/core/structs/nested-struct-align-32.lc", line 7
struct V1 [ p :: Array 12 S ]
                 ^
There is no byte level representation for values of type Array 12 S

ERROR: "actual/main/core/structs/nested-struct-align-32.lc", line 8
struct V2 [ r :: Array 12 U ]
                 ^
There is no byte level representation for values of type Array 12 U

ERROR: Aborting after 3 previously reported errors

